--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
-    <title>calendar-component demo</title>
-
-    <script src="../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-
-    <link rel="import" href="../bower_components/iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../bower_components/iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="src/calendar-component.html">
-
+    <meta http-equiv="refresh" content="0;url=demo/" />
+    <title>calendar-component</title>
   </head>
   <body>
-    <div class="vertical-section-container centered">
-          <calendar-component items='[{"date":"2018-09-26","subject":"1:1 Meeting"}, {"date":"2018-09-24","subject":"Home Team Weekly"}, {"date":"2018-09-27","subject":"Tech Lunch"}]'></calendar-component>
-    </div>
+    <!--
+        ELEMENT API DOCUMENTATION SUPPORT COMING SOON
+        Visit demo/index.html to see live examples of your element running.
+        This page will automatically redirect you there when run in the browser
+        with `polymer serve`.
+      -->
   </body>
 </html>
