removed 'bower_components' from imports

--- a/src/calendar-component.html
+++ b/src/calendar-component.html
@@ -1,8 +1,8 @@
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/icons.html">
-<link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
-<link rel="import" href="../bower_components/vaadin-button/vaadin-button.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/spacing.html">
+<link rel="import" href="../../polymer/polymer-element.html">
+<link rel="import" href="../../vaadin-lumo-styles/icons.html">
+<link rel="import" href="../../vaadin-icons/vaadin-icons.html">
+<link rel="import" href="../../vaadin-button/vaadin-button.html">
+<link rel="import" href="../../vaadin-lumo-styles/spacing.html">
 <link rel="import" href="calendar-month.html">
 <link rel="import" href="calendar-header.html">
 <link rel="import" href="calendar-event.html">
