--- a/demo/index.html
+++ b/demo/index.html
@@ -6,11 +6,11 @@
 
     <title>calendar-component demo</title>
 
-    <script src="../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="../../bower_components/iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../bower_components/iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../src/calendar-component.html">
+    <link rel="import" href="../iron-demo-helpers/demo-pages-shared-styles.html">
+    <link rel="import" href="../iron-demo-helpers/demo-snippet.html">
+    <link rel="import" href="../calendar-component.html">
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
