--- a/src/calendar-event.html
+++ b/src/calendar-event.html
@@ -1,10 +1,10 @@
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/vaadin-text-field/vaadin-text-field.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/typography.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/sizing.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/spacing.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/color.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/badge.html">
+<link rel="import" href="../../polymer/polymer-element.html">
+<link rel="import" href="../../vaadin-text-field/vaadin-text-field.html">
+<link rel="import" href="../../vaadin-lumo-styles/typography.html">
+<link rel="import" href="../../vaadin-lumo-styles/sizing.html">
+<link rel="import" href="../../vaadin-lumo-styles/spacing.html">
+<link rel="import" href="../../vaadin-lumo-styles/color.html">
+<link rel="import" href="../../vaadin-lumo-styles/badge.html">
 
 <dom-module id="calendar-event">
     <template>
