--- a/src/calendar-month.html
+++ b/src/calendar-month.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/typography.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/sizing.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/spacing.html">
-<link rel="import" href="../bower_components/vaadin-lumo-styles/color.html">
+<link rel="import" href="../../polymer/polymer-element.html">
+<link rel="import" href="../../vaadin-icons/vaadin-icons.html">
+<link rel="import" href="../../vaadin-lumo-styles/typography.html">
+<link rel="import" href="../../vaadin-lumo-styles/sizing.html">
+<link rel="import" href="../../vaadin-lumo-styles/spacing.html">
+<link rel="import" href="../../vaadin-lumo-styles/color.html">
 
 <dom-module id="calendar-month">
     <template>
