--- a/src/calendar-event.html
+++ b/src/calendar-event.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../polymer/polymer-element.html">
+<link rel="import" href="../../iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="../../vaadin-text-field/vaadin-text-field.html">
 <link rel="import" href="../../vaadin-lumo-styles/typography.html">
 <link rel="import" href="../../vaadin-lumo-styles/sizing.html">
@@ -10,31 +11,69 @@
     <template>
     		<style include="lumo-typography lumo-color lumo-badge">
     			.event-item {
-	    			display: block;
  			    margin-top: var(--lumo-space-xs); 
+ 			    display: flex;
+    			}
+    			.event-title {
+	    			display: block;
     				white-space: nowrap;
   				overflow: hidden;
   				text-overflow: ellipsis;
   				min-width: 0;
   				cursor: pointer;
+  				flex: 1 1 100%;
     			}
+    			.event-time {
+    				float: right; 
+    				font-size: 11px;
+    			}
+    			:host([hide-time]) .event-time {
+			    display: none;
+			 }
     		</style>
-		<div class="event-item" theme="badge small primary">
-			<span title=[[item.subject]] on-click="processItemClicked">[[item.subject]]</span>
+		<div class="event-item" theme$="badge small [[item.theme]]" on-click="processItemClicked">
+			<div class="event-title">
+				<span title=[[item.subject]] >[[item.subject]]</span>
+			</div>
+			<div class="event-time">[[time]]</div>
 		</div>
 	</template>
     <script>
-        class CalendarEvent extends Polymer.Element {
+        class CalendarEvent extends Polymer.mixinBehaviors(Polymer.IronResizableBehavior, Polymer.Element) {
             static get is() {
                 return 'calendar-event';
             }
             static get properties() {
                 return {
-		            item: Object
+	                	item: {
+		            		type: Object,
+		            		notify: true,
+		            		observer : '_processItemChange'
+		            },
+		            time: {
+		            		type: String
+		            },
+		            hideTime: {
+		            		type : Boolean,
+		            		value: true,
+		            		reflectToAttribute: true
+		            }
                 };
             }
+            connectedCallback() {
+                super.connectedCallback();
+                this.addEventListener('iron-resize', this._handleResize.bind(this));
+                this._handleResize();
+              }
             processItemClicked() {
             		this.dispatchEvent(new CustomEvent('event-clicked', {detail: this.item}));
+            }
+            _processItemChange() {
+            		var d = new Date(this.item.date);
+            		this.time = (d.getHours()<10?"0":"") + d.getHours() + ":" + (d.getMinutes() < 10 ? "0":"") + d.getMinutes();
+            }
+            _handleResize(e) {
+            		this.hideTime = this.getBoundingClientRect().width < 140;
             }
         }
         customElements.define(CalendarEvent.is, CalendarEvent);
