Added theme to events.

--- a/demo/index.html
+++ b/demo/index.html
@@ -22,16 +22,15 @@
       <h3>Basic calendar-component demo</h3>
       <demo-snippet>
         <template>
-          <calendar-component active-date="2018-08-01" items='[{"date":"2018-08-08","subject":"Meeting"}, {"date":"2018-08-14","subject":"Dentist Appointment"}, {"date":"2018-08-24","subject":"Dinner with Friends"}]'></calendar-component>
+          <calendar-component active-date="2018-08-01" items='[{"date":"2018-08-08 20:00","subject":"Meeting", "theme" : "primary"}, {"date":"2018-08-14 12:30","subject":"Dentist Appointment", "theme" : "contrast primary"}, {"date":"2018-08-24 19:30","subject":"Dinner with Friends", "theme" : "success primary"}]'></calendar-component>
         </template>
           <script>
           	document.addEventListener('WebComponentsReady', function() {
           		var calendar = document.querySelector('calendar-component');
-          		
-          		document.addEventListener('EventClicked', function(e) {
-            			alert('Event clicked : ['+e.detail.subject+']');
-            		});
-  			})
+          		calendar.addEventListener('event-clicked', function(e) {
+        				alert('Event clicked : ['+e.detail.subject+']');
+        			});
+  			});
         </script>
       </demo-snippet>
     </div>
